Fixed carousel on surge, fixed header in safarim fixed spacing and corrected errors and warnings

--- a/waverly-inn/src/App.css
+++ b/waverly-inn/src/App.css
@@ -147,7 +147,6 @@ h6 {
 
 .selected {
   border-bottom: 4px solid black;
-  opacity: 100%;
 }
 
 .rightSide{
@@ -269,23 +268,14 @@ nav {
   background-color: rgba(0,0,0,0.7);
   padding: 30px;
   position: fixed;
-  width: 100%;
+  width: calc(100vw - 60px);
   margin: 0;
-}
-
-.carousel {
-  width: 100%;
-  margin-bottom: -5px;
-  margin-top: -5px;
-  padding: 0;
 }
 
 .carousel img {
-  width: 100%;
-  margin: 0;
-  height: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
-
 footer {
   background-color: black;
   display: flex;
@@ -304,8 +294,13 @@ footer {
   width: 120px;
 }
 
-.header-logo {
+.logo-container {
   width: 285px;
+}
+
+.header-logo {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .icon {
